--- a/oluwayomi.oke/05_HTML-and-CSS/index.html
+++ b/oluwayomi.oke/05_HTML-and-CSS/index.html
@@ -61,23 +61,23 @@
 		</header>
 
 		<main>
-			<section class="">
-				<div class="">
-					<h3>
+			<section class="section-1 flex">
+				<div class="info">
+					<h3 class="info-heading">
 						We are Max.
 						<br />
 						We are bringing the future of mobility to
 						Africa today.
 					</h3>
 
-					<p>
+					<p class="info-text">
 						The big picture for us is a seamless
 						transportation experience for Africans
 						powered by innovation, technology, and
 						eco-friendly infrastructure.
 					</p>
 
-					<p>
+					<p class="info-text">
 						We are delivering a transformational
 						experience to drivers and commutes via a
 						powerful platform that is driving
@@ -85,68 +85,93 @@
 						Africa.
 					</p>
 
-					<a href="#">Learn more ></a>
+					<a href="./about.html">Learn more ></a>
 				</div>
 
 				<div class="section-1_img"></div>
 			</section>
 
-			<section class="section-2">
-				<p>We grow because we care.</p>
+			<section class="section-2 flex">
+				<p class="section-2_title">
+					We grow because we care.
+				</p>
 
-				<div class="">
-					<p>9M+ <span>Trips</span></p>
-					<p>5+ <span>Operating cities</span></p>
-					<p>13k+ <span>Champions</span></p>
+				<div class="section-2_data flex">
+					<p class="section-2_text flex">
+						9M+
+						<span>Trips</span>
+					</p>
+					<p class="section-2_text flex">
+						5+
+						<span>Operating cities</span>
+					</p>
+					<p class="section-2_text flex">
+						13k+
+						<span>Champions</span>
+					</p>
 				</div>
 			</section>
 
-			<section class="section-3">
+			<section class="section-3 flex">
 				<div class="section-3_img"></div>
 
-				<div class="">
-					<h3>
+				<div class="info">
+					<h3 class="info-heading">
 						Are you an experienced driver? Do you want
 						to
 					</h3>
 
-					<ul>
-						<li>
+					<ul class="section-3_list">
+						<li class="flex">
 							<i class="fa-solid fa-circle-check"></i>
-							Own a high-end vehicle - motorcycle,
-							mini-bus, tricycle, or car?
+							<p class="info-text">
+								Own a high-end vehicle - motorcycle,
+								mini-bus, tricycle, or car?
+							</p>
 						</li>
-						<li>
+						<li class="flex">
 							<i class="fa-solid fa-circle-check"></i>
-							Pick up more passengers than ever?
+							<p class="info-text">
+								Pick up more passengers than ever?
+							</p>
 						</li>
-						<li>
+						<li class="flex">
 							<i class="fa-solid fa-circle-check"></i>
-							Connect with enterprises for delivery
-							services?
+							<p class="info-text">
+								Connect with enterprises for delivery
+								services?
+							</p>
 						</li>
-						<li>
+						<li class="flex">
 							<i class="fa-solid fa-circle-check"></i>
-							Save the planet by transitioning to
-							electric vehicles?
+							<p class="info-text">
+								Save the planet by transitioning to
+								electric vehicles?
+							</p>
 						</li>
-						<li>
+						<li class="flex">
 							<i class="fa-solid fa-circle-check"></i>
-							Earn more money on your terms?
+							<p class="info-text">
+								Earn more money on your terms?
+							</p>
 						</li>
-						<li>
+						<li class="flex">
 							<i class="fa-solid fa-circle-check"></i>
-							Enjoy great health and vehicle insurance
-							plans?
+							<p class="info-text">
+								Enjoy great health and vehicle
+								insurance plans?
+							</p>
 						</li>
-						<li>
+						<li class="flex">
 							<i class="fa-solid fa-circle-check"></i>
-							Get free access to necessary driver
-							skill development and training?
+							<p class="info-text">
+								Get free access to necessary driver
+								skill development and training?
+							</p>
 						</li>
 					</ul>
 
-					<p>
+					<p class="info-text">
 						Then you're in the right place. At max, we
 						pride ourselves on our vision to empower
 						transport operators across Africa to grow
@@ -155,23 +180,23 @@
 						the jon.
 					</p>
 
-					<a href=""
+					<a href="#"
 						>Learn about our Drivers Services Platform
 						></a
 					>
 				</div>
 			</section>
 
-			<section class="section-4">
+			<section class="section-4 flex">
 				<div class="section-4_img"></div>
 
-				<div class="">
-					<h3>
+				<div class="info">
+					<h3 class="info-heading">
 						Pioneering Electric Vehicles (EVs) in
 						Africa.
 					</h3>
 
-					<p>
+					<p class="info-text">
 						We are leading EV transformation in Africa
 						as the first company to design and
 						customize electric vehicles and drive
@@ -179,7 +204,7 @@
 						transportation.
 					</p>
 
-					<p>
+					<p class="info-text">
 						Our Ev initiative will lead Africa on a
 						transition to eco-friendly mobility fueled
 						by clean energy and still serve the
@@ -194,79 +219,82 @@
 		</main>
 
 		<footer>
-			<div class="">
+			<div class="footer-heading">
 				<h2>
 					The world of vehicles at the feet of a
 					<br />
 					MAX champion
 				</h2>
 
-				<button>Become a MAX champion</button>
+				<button class="footer-btn">
+					Become a MAX champion
+				</button>
 			</div>
 
-			<div class="">
-				<div class="">
+			<div class="footer-nav">
+				<div class="footer-info">
 					<h4>Company</h4>
-					<a href="" class="footer-links"
+					<a href="./about.html" class="footer-links"
 						>About Metro Africa Xpress</a
 					>
-					<a href="" class="footer-links">Impact</a>
-					<a href="" class="footer-links"
+					<a href="#" class="footer-links">Impact</a>
+					<a href="#" class="footer-links"
 						>Press & Media</a
 					>
 					<a href="" class="footer-links">Careers</a>
 				</div>
 
-				<div class="">
+				<div class="footer-info">
 					<h4>Services</h4>
-					<a href="" class="footer-links"
+					<a href="#" class="footer-links"
 						>Drivers Platform</a
 					>
-					<a href="" class="footer-links"
+					<a href="#" class="footer-links"
 						>Transport Marketplace</a
 					>
-					<a href="" class="footer-links"
+					<a href="#" class="footer-links"
 						>Enterprise</a
 					>
-					<a href="" class="footer-links"
+					<a href="#" class="footer-links"
 						>Electric Vehicles</a
 					>
 				</div>
 
-				<div class="">
+				<div class="footer-info">
 					<h4>Get in touch</h4>
-					<div class="">
-						<a href="" class="footer-icons">
+
+					<div class="footer-icons">
+						<a href="#" class="icon">
 							<i class="fa-brands fa-youtube"></i>
 						</a>
 
-						<a href="" class="footer-icons">
+						<a href="#" class="icon">
 							<i class="fa-brands fa-twitter"></i>
 						</a>
 
-						<a href="" class="footer-icons">
+						<a href="#" class="icon">
 							<i
 								class="fa-brands fa-square-facebook"
 							></i>
 						</a>
 
-						<a href="" class="footer-icons">
+						<a href="#" class="icon">
 							<i class="fa-brands fa-instagram"></i>
 						</a>
 
-						<a href="" class="footer-icons">
+						<a href="#" class="icon">
 							<i class="fa-brands fa-linkedin"></i>
 						</a>
 					</div>
 
 					<div class="footer-email">
-						<p>success@max.ng</p>
-						<p>info@max.ng</p>
+						<p class="footer-links">success@max.ng</p>
+						<p class="footer-links">info@max.ng</p>
 					</div>
 
-					<p>
-						25b Bisola Durosinmi Etti dr, Lekki Phase
-						1
+					<p class="footer-links">
+						25b Bisola Durosinmi <br />
+						Etti dr, Lekki Phase 1
 					</p>
 				</div>
 			</div>
