contact page updated

--- a/oluwayomi.oke/05_HTML-and-CSS/about.html
+++ b/oluwayomi.oke/05_HTML-and-CSS/about.html
@@ -62,79 +62,82 @@
 		<main></main>
 
 		<footer>
-			<div class="">
+			<div class="footer-heading">
 				<h2>
 					The world of vehicles at the feet of a
 					<br />
 					MAX champion
 				</h2>
 
-				<button>Become a MAX champion</button>
+				<button class="footer-btn">
+					Become a MAX champion
+				</button>
 			</div>
 
-			<div class="">
-				<div class="">
+			<div class="footer-nav">
+				<div class="footer-info">
 					<h4>Company</h4>
-					<a href="" class="footer-links"
+					<a href="./about.html" class="footer-links"
 						>About Metro Africa Xpress</a
 					>
-					<a href="" class="footer-links">Impact</a>
-					<a href="" class="footer-links"
+					<a href="#" class="footer-links">Impact</a>
+					<a href="#" class="footer-links"
 						>Press & Media</a
 					>
 					<a href="" class="footer-links">Careers</a>
 				</div>
 
-				<div class="">
+				<div class="footer-info">
 					<h4>Services</h4>
-					<a href="" class="footer-links"
+					<a href="#" class="footer-links"
 						>Drivers Platform</a
 					>
-					<a href="" class="footer-links"
+					<a href="#" class="footer-links"
 						>Transport Marketplace</a
 					>
-					<a href="" class="footer-links"
+					<a href="#" class="footer-links"
 						>Enterprise</a
 					>
-					<a href="" class="footer-links"
+					<a href="#" class="footer-links"
 						>Electric Vehicles</a
 					>
 				</div>
 
-				<div class="">
+				<div class="footer-info">
 					<h4>Get in touch</h4>
-					<div class="">
-						<a href="" class="footer-icons">
+
+					<div class="footer-icons">
+						<a href="#" class="icon">
 							<i class="fa-brands fa-youtube"></i>
 						</a>
 
-						<a href="" class="footer-icons">
+						<a href="#" class="icon">
 							<i class="fa-brands fa-twitter"></i>
 						</a>
 
-						<a href="" class="footer-icons">
+						<a href="#" class="icon">
 							<i
 								class="fa-brands fa-square-facebook"
 							></i>
 						</a>
 
-						<a href="" class="footer-icons">
+						<a href="#" class="icon">
 							<i class="fa-brands fa-instagram"></i>
 						</a>
 
-						<a href="" class="footer-icons">
+						<a href="#" class="icon">
 							<i class="fa-brands fa-linkedin"></i>
 						</a>
 					</div>
 
 					<div class="footer-email">
-						<p>success@max.ng</p>
-						<p>info@max.ng</p>
+						<p class="footer-links">success@max.ng</p>
+						<p class="footer-links">info@max.ng</p>
 					</div>
 
-					<p>
-						25b Bisola Durosinmi Etti dr, Lekki Phase
-						1
+					<p class="footer-links">
+						25b Bisola Durosinmi <br />
+						Etti dr, Lekki Phase 1
 					</p>
 				</div>
 			</div>
