about page completed

--- a/oluwayomi.oke/05_HTML-and-CSS/about.html
+++ b/oluwayomi.oke/05_HTML-and-CSS/about.html
@@ -15,6 +15,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
 		/>
 		<link rel="stylesheet" href="./CSS/style.css" />
+		<link rel="stylesheet" href="./CSS/about.css" />
 		<title>Max | About</title>
 	</head>
 
@@ -51,15 +52,95 @@
 			</nav>
 
 			<div class="hero">
-				<h2 class="hero-text">
-					The world of vehicles at the
-					<br />
-					feet of a MAX champion
-				</h2>
+				<div class="hero-text">
+					<h2 class="">About</h2>
+
+					<div class="hero-link">
+						<a class="" href="./">Home </a>
+						<span>>></span>
+						<a class="" href="./contact.html">
+							About
+						</a>
+					</div>
+				</div>
 			</div>
 		</header>
 
-		<main></main>
+		<main>
+			<section class="section-1 flex">
+				<div class="section-1_img"></div>
+
+				<div class="info">
+					<p class="intro-text">Africa Based.</p>
+
+					<h3 class="info-heading">
+						Worldwide Focused.
+					</h3>
+
+					<p class="info-text">
+						ARC Is à global loador in the HR services
+						industry, By serving as a trustod human
+						partner in today's technology-driven world
+						of talent, we support poopie and
+						organizations in realizing their true
+						potential.
+					</p>
+
+					<p class="info-text">
+						We are a technology-driven Profess'onal
+						Employer Organisation solving the problem
+						of Hiring and Paying your Company's global
+						talent. We understand that identifying and
+						retaining high-quality talent is one of
+						the biggest and most important challenges
+						facing organizations and this is something
+						we taka pride in solving, We have a fuli
+						range of staffing, technical recruiting
+						and retention services that achieve your
+						goals.
+					</p>
+				</div>
+			</section>
+
+			<section class="section-2 flex">
+				<h3 class="message">
+					Our Services
+					<span>.</span>
+				</h3>
+
+				<div class="service-list flex">
+					<div class="service flex">
+						<div class="icon">
+							<i
+								class="fa-solid fa-chart-simple fa-2x"
+							></i>
+						</div>
+
+						<p>HR Professional Services</p>
+					</div>
+
+					<div class="service flex">
+						<div class="icon">
+							<i
+								class="fa-solid fa-suitcase fa-2x"
+							></i>
+						</div>
+
+						<p>Staffing and Recruiting</p>
+					</div>
+
+					<div class="service flex">
+						<div class="icon">
+							<i class="fa-solid fa-globe fa-2x"></i>
+						</div>
+
+						<p>Payroll & Benefits</p>
+					</div>
+				</div>
+
+				<button class="contact-btn">VIEW MORE</button>
+			</section>
+		</main>
 
 		<footer>
 			<div class="footer-heading">
