--- a/oluwayomi.oke/05_HTML-and-CSS/about.html
+++ b/oluwayomi.oke/05_HTML-and-CSS/about.html
@@ -51,7 +51,7 @@
 				<button>Become a MAX Rider</button>
 			</nav>
 
-			<div class="hero">
+			<div class="about-hero hero">
 				<div class="hero-text">
 					<h2 class="">About</h2>
 
